// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the proper shape 1`] = `
<i
  talonProps={
    Object {
      "addToWishlistProps": Object {
        "afterAdd": [Function],
        "buttonText": [Function],
        "item": Object {
          "quantity": 7,
          "selected_options": Array [],
          "sku": "unit-test-sku",
        },
        "storeConfig": Object {
          "wishlistEnabled": true,
        },
      },
      "errorMessage": "",
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleUpdateItemQuantity": [Function],
      "isEditable": false,
      "isProductUpdating": false,
      "product": Object {
        "currency": "USD",
        "image": "test.webp",
        "name": "unit test",
        "options": Array [],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;

exports[`it returns the proper shape when use variant image is configured 1`] = `
<i
  talonProps={
    Object {
      "addToWishlistProps": Object {
        "afterAdd": [Function],
        "buttonText": [Function],
        "item": Object {
          "quantity": 7,
          "selected_options": Array [
            "selected-option-uid",
          ],
          "sku": "unit-test-sku",
        },
        "storeConfig": Object {
          "wishlistEnabled": true,
        },
      },
      "errorMessage": "",
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleUpdateItemQuantity": [Function],
      "isEditable": true,
      "isProductUpdating": false,
      "product": Object {
        "currency": "USD",
        "image": "variant1.webp",
        "name": "unit test",
        "options": Array [
          Object {
            "configurable_product_option_value_uid": "selected-option-uid",
            "id": 22,
            "option_label": "Color",
            "value_id": 2,
            "value_label": "red",
          },
        ],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;
